<resources>
    <string name="app_name">i-ROBO</string>
    <string name="action_settings">Settings</string>
    <string name="information">Electrical and Electronics Engineering (EEE), deals with the engineering problems, opportunities and needs of electrical, electronics, computer, telecommunication systems and related industries. This branch provides students with a wide range of fundamental knowledge in core disciplines such as communications, control systems, signal processing, radio frequency design, micro-processors, micro-electronics, power generation and electrical machines. The discipline focuses on design and manufacture of electrical, electronic devised, computers and their component parts, as well as on the integration of components into complex systems.</string>
    <string name="title_activity_project_type">Project type</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_simple_project">Simple Project</string>
    <string name="title_activity_micro_controller">MicroController</string>
    <string name="title_activity_complex_project">Complex Project</string>
    <string name="title_activity_exit">Exit</string>
    <string name="title_activity_light_dark_sensor">Light and Dark Sensor</string>
    <string name="procidureOFLightAndDarkSensor">"Precedure: \nRemember that the LDR doesn't have a negative or positive terminal !Connect the first terminal of the LDR to positive and second terminal through variable resistor to negative.Then start varying and when you get a vary for example(.58 v to 1.1v) or If the vary is of good range ,then also the circuit will work.After that take a wire in between from LDR and variable resistor and put in the third pin of the LM358 IC.In this circuit the left LDR is light sensor and the right LDR is Dark sensor.When you put hand on left LDR the 1st led stops glowing."</string>
    <string name="ApparetusOFLightandDarkSensor">\n\nApparatus:\n\n1)LM358 IC\n2)LM7805 IC\n3)2 LEDs\n4)2 LDRs\n5)Breadboard\n6)3 9v batteries\n7) wires\n8)Two variable resistors of 10K\n\n</string>
    <string name="title_activity_touching_alarm">Touching Alarm</string>
    <string name="procidure_of_TouchingAlarm">Procedure:\nThe best way I know to build something is to understand every individual part. The burglar alarm is made of three parts:\n\t 1.The device that makes noise - a buzzer\n\t2.The battery\n\t3.The buzzer switch \n\nThe Buzzer\nWe cannot have an alarm without something that makes sounds. That is why we use a buzzer, which is something that makes a loud sound. To make the sound, the buzzer needs to be connected to the battery.\n\nThe Battery\nThe battery is very important to the alarm. For the buzzer to work, it needs energy. This energy comes from the battery. If the buzzer is not connected to the battery, it will not work. You have a switch to control this connection.\n\nThe Buzzer Switch\nSee how the buzzer works by connecting your 1.5-volt battery to the buzzer directly. (The buzzer should come with two different wires. If the wire is insulated, you will need to peel a small length so that you are able to see the metal wire inside.) Get two other pieces of wire and connect them to opposite ends of the battery. Connect one wire to (+) and the other to (-) (see diagram 1). In diagram 1, the battery should have the (+) and (-) labeled. Also, if you look closely, there is a (+) and (-) on the battery that you bought.\nYou may want to use electrical tape to hold the wires in place on the battery.\nCnnect the buzzer’s wires and the battery’s wires by twisting them, just like in the diagram 1. The buzzer should be making a sound; if it does not, check the connections at the ends of the wires to the battery.\n\Question: \n What happens when you disconnect a wire from the buzzer?\n Now, connect it again as often as you want and see how the buzzer turns on and off. By connecting and disconnecting the wires, what you have made is called a switch. \nWhen you disconnect a wire and the buzzer stops sounding, we say that the switch is open. When it is open, no energy from the battery reaches the buzzer.\nWhen you connect the wire and the buzzer sounds, we say that the switch is closed. When it is closed, the energy from the battery reaches the buzzer.  </string>
    <string name="aPParetus_touching_alarm">   \n\nApparatus:\n\t1. Insulated Wire\n
        \nGet 4 strands of wire, each 1 foot in length
        \nYou can find the wires around the house, inside battery-operated appliances that no longer work. Make sure that your parents give you permission to take them apart.
        \nYou can also buy the wires and other supplies listed from a Radio Shack, a hardware store, or the electrical section of big stores like Walmart.
        \nNote: In order to make this alarm, you will need to peel off the rubber/plastic insulation from two of the wires. Try to peel the wires before starting this lesson. If it is too difficult for you, then you can buy non-insulated wire that does not need peeling.
    \n\t2. 1.5-volt battery.
   \n\t3. Kite string or button-and-carpet thread, 3-5 feet long.
    \n\t4.Scissors
    \n\t5. Electrical tape
   \n\t6. 1.5-volt mini-buzzer
   \n\t7. Spring-type wooden clothes pin
   \n\t8. A scrap piece of board or plywood 4 inches by 12 inches or bigger.
   \n\t9. Super Glue </string>
    <string name="title_activity_fire_alarm">Fire Alarm</string>
    <string name="introduction_irobject_detector">"Introduction:\n\nThe IR Object Detection sensor module is quiet easy to make. This sensor circuit below is a low cost - low range infrared object detection module that you can easily make at home using IR LED's.

\nWe will use a photodiode and IR LED to make a simple circuit. IR led looks like a regular LED that you usually see in Television Remote controls.
\nFor now I have added a regular LED to glow as in indicator when something is detected, you can replace it with a buzzer or something else the way you wish.

\nThe Main concept is simple, the IR led keeps transmitting IR infrared rays up to some range (there is a potentiometer also in the design with the help of which you can alter the range). When some object comes in the (IR) infrared range, the IR waves hits the object and comes back at some angle, The Photo diode next to IR led detects that IR infrared rays which got reflected from the object and hence works as a proximity sensor. You can read more details about Proximity sensors for more."</string>
    <string name="apparatus_irobject_detector">\n\nApparatus:\n\n IR Sensor Circuit Module Requirements

1 - IR LED TSFF5210
1 - PR (photodiode) BPV10NF
1 - 1k resistance
1 - 220E resistance
1 - 6k8 resistance
1 - 10k potentiometer
1 - IC LM358

 
Infrared sensor Module Schematics:

Following this schematic you can easily make it on a breadboard, I intentionally drew this schematic for this IR sensor this way so that it can easily printed on the copper board in no time if you have some etching solution.\n\n </string>
    <string name="procedure_irobject_detector">\n\nFor now in this circuit an LED would glow as an example. Notice that there are three pins in the schematic in which two pins are used to provide power to the infrared sensor and the Middle pin is unused, and can be used for other operation. The Middle pin goes high (Logic 1) if the photodiode in this object detection module detects an object, and hence can be interfaced with other devices. You can use it the way you wish, it can be used to run some DC motors and make a simple robot. The middle pin of the IR Sensor Circuit can be interfaced with Microcontroller easily to do complex operations,or you can interface an LCD with microcontroller and have the status of the sensor displayed on the LCD very easily as in my next tutorial for interfacing multiple IR Sensors with Arduino and LCD.

Use the way you want it.

Thanks for reading</string>
    <string name="Apparatus_lfr">" Line Following Robot without Microcontroller

Level : Beginners

You Require:

1. Power Supply Circuit (Click here if you've not seen it yet)
2. IC LM324 Op-Amp
3. IC L293D Motor Driver
4. Resistors 2X10kΩ, 2X330Ω
5. 2X IR LED Tx Rx pairs
6. 2X 10k Potentiometer


Hardware


1. Chassis
2. 2X9V Geared DC Motors
3. Castor wheel
4. 2XWheels


A line follower is an autonomous robot which can follow a specific colored line painted on a surface of different contrast, such as white on black or black on white. Here I'll show you how to make a black on white line follower."</string>
    <string name="procedure1_lfr">" Before going into the actual tutorial, let me explain you a small concept about light. You must be knowing that the light that strikes any platform is reflected. The reflection and absorption coefficient of light depend upon material, color of platform and other factors. In simple words the black surface absorbs the light and the white surface reflects it, this is the basic concept behind making a line follower.
\n\nSo our robot's sensor has two parts which are emitter and receiver. The emitter continuously emits the infrared light and the receiver absorbs it after getting reflected from the black or white surface. The voltage across the receiver is directly proportional to the reflected light it absorbs. So for white surface, maximum reflection occurs so maximum voltage across the receiver and vice-versa."</string>
    <string name="procedure2_lfr">Firstly, lets make the sensor circuit for our robot. We would need two of these sensors to sense either sides of the line.Now the voltage across the receiver is a analog value but we would need a digital value to make the robot work. So we use a Op-Amp IC LM324 to convert this analog value into a digital value such that when sensor senses black line, it outputs logic low (0 volts) and when it senses white line it outputs logic high (+5 volts)
\n\n\nLM324 is used as a comparator here. We give a reference voltage to its input using a 10k pot. When the voltage across the receiver is less than this reference voltage, the comparator gives low output and when the voltage is more than the reference point, the comparator gives a high output.</string>
    <string name="table1_lfr">\n\n
The table below shows how the robot senses its position on the line:-</string>
    <string name="motorDriver_lfr">"\n\n\nMotor Driver L293D\n\n


Well a LM324 IC cannot drive motors directly since it can't supply the power which can drive the motors. So we use a motor driver IC which takes a low voltage input and supplies high power to the motors"</string>
    <string name="table2_lfr">The table below shows the various input combinations and the direction of motion related to that combination:-</string>
    <string name="procedure3_lfr">"\n\nThere are two enable pins for this IC, one is for Motor 1 and other is for Motor 2. The Motor would be only enabled if this pin is provided with logic high, or else the motor would stop. We connect the sensor output to the two enable pins. I guess you  must have already got the idea as to how to connect the comparator's output to the motor driver's Enable pins. Still didn't get it? then look at the image below."</string>
    <string name="procedurelast_lfr">\n\nThe Input pins 2 and 15 are grounded and pins 7 and 10 are supplied with 5 volts so when the motors are enabled, they will only in forward direction.




Attach the motors and castor wheel to the chassis and fit in the wheels into the motor shaft. Connect the wires coming from motor to the output of the motor driver IC. Thats all! Your own made Autonomous Line Follower Robot is ready to run now!</string>
</resources>