
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lfr" >
    
    
 <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Apparatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Apparatus_lfr" />
 
            
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lfr" />
            
             <TextView
                android:id="@+id/procedure1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedure1_lfr" />
            
 
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lfr2" />
            
            
             <TextView
                android:id="@+id/procedure2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedure2_lfr" />
             
               <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lfr3" />
               
               
             <TextView
                android:id="@+id/table1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table1_lfr" />
             
               <ImageView
                android:id="@+id/table1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/table1" />
                <TextView
                android:id="@+id/motordriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motorDriver_lfr" />
            
               <ImageView
                android:id="@+id/img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lfr4" />
               
                  
             <TextView
                android:id="@+id/table2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table2_lfr" />
             
               <ImageView
                android:id="@+id/table2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/table2" />
               
                   
                  
             <TextView
                android:id="@+id/procidure3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedure3_lfr" />
             
               <ImageView
                android:id="@+id/img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lfr5" />
               
               
             <TextView
                android:id="@+id/procidurelast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedurelast_lfr" />
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.57"
                android:orientation="horizontal" >
                      <Button
                android:id="@+id/BtnBack"
                android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               
                android:background="#002761"
                 android:text="Back" />
         <Button
                android:id="@+id/ExitBtn"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:layout_weight="1"
                android:background="#002761"
                  android:text="Exit" />
            </LinearLayout>
            
        </LinearLayout>

    </ScrollView>
    

    
</RelativeLayout>
